fix: bigger font on smaller ssizes

--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,7 @@
 }
 
 body {
-  font-size: clamp(1rem, 3.6vw, 3.6rem);
+  font-size: clamp(1.15rem, 3.6vw, 3.6rem);
   font-family: var(---font, sans-serif);
   background-color: var(---c-bg, #ebebeb);
   color: var(---c-a1, #646464);
